# DAILY_NINJA

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: main_dailyninja.yml
daily_ninja_backend/: package-lock.json  package.json
daily_ninja_python/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
daily_ninja_python/azure/: README.md  azure-pipelines.yml
daily_ninja_python/backend/: .env.example  run.py
daily_ninja_python/backend/app/: __init__.py
daily_ninja_python/backend/app/api/: __init__.py  activity.py  auth.py  tasks.py
daily_ninja_python/backend/app/core/: __init__.py  config.py
daily_ninja_python/backend/app/models/: __init__.py  models.py
daily_ninja_python/config/: .env.example
daily_ninja_python/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
daily_ninja_python/docs/: ARCHITECTURE.md  ENVIRONMENT.md  SETUP.md  STRUCTURE.md
daily_ninja_python/frontend/: README.md  __init__.py  app.py
daily_ninja_python/frontend/data/: .gitkeep  user_data.json
daily_ninja_python/requirements/: base.txt  dev.txt  prod.txt
daily_ninja_python/tests/: conftest.py
daily_ninja_python/tests/integration/: test_post_deploy.py
daily_ninja_python/tests/unit/: test_heatmap_and_alerts.py  test_streak_counter.py
daily_ninja_python/workers/: __init__.py
docker/: Dockerfile.azure
docs/: AZURE_DEPLOY.md
infra/arm/: main.json
infra/bicep/: main.bicep
scripts/azure/: 01_setup_rg_acr.sh  02_build_push.sh  03_deploy_webapp.sh  04_verify_deployment.sh  05_configure_autoscale.sh
